WIP added Xslash calculation and connected new GUI with backend

--- a/TODO.txt
+++ b/TODO.txt
@@ -9,12 +9,16 @@ fix while in while non expansiveness proof
 hover over buttons for full text in whileLoops
 make log appear in runtime => threads? concurrency in swing
 write readme with usage and documentation
-while button list on select highlight selected one, as well as examine button
+Question: Dont we need to consider [not guard ] * f in Phi(X) somehow?
+reset Cache button
+write tests for all new methods
+write systematic tests
+
 
 DONE:
-while after while all sigma fix
-while in while caching
-
+DONE while after while all sigma fix
+DONE while in while caching
+DONE while button list on select highlight selected one, as well as examine button
 
 
 
