--- a/TODO.txt
+++ b/TODO.txt
@@ -9,11 +9,12 @@ fix while in while non expansiveness proof
 hover over buttons for full text in whileLoops
 make log appear in runtime => threads? concurrency in swing
 write readme with usage and documentation
-Question: Dont we need to consider [not guard ] * f in Phi(X) somehow?
+Question: Dont we need to consider [not guard ] * f in Phi(X) somehow? => we basically test wp hash
 reset Cache button
 write tests for all new methods
 write systematic tests
-
+//TODO cache saves wrong if assignment before while saves?
+//TODO fixpoint witness input if needed? where all needed variable combinations can be inputted 
 
 DONE:
 DONE while after while all sigma fix
