--- a/TODO.txt
+++ b/TODO.txt
@@ -2,9 +2,11 @@ New TODO list system:
 
 TODO:
 
-
+remove delta input for evaluation; if hash if defined for all components
+create data structures instead of straight string manipulation? New Calculation object or something with C F etc. saved
+create MVC pattern controller!!!
 fix while in while non expansiveness proof
-
+fix maven guava dependency
 make log appear in runtime => threads? concurrency in swing
 write readme with usage and documentation / rename github
 write systematic tests
